--- a/ui/app/templates/widgets/entity_selector.jinja2
+++ b/ui/app/templates/widgets/entity_selector.jinja2
@@ -1,11 +1,11 @@
-{% macro entity_selector(prefix, initial_name='', initial_id='') %}
+{% macro entity_selector(prefix, initial_name='', initial_id='', show_id_label=True) %}
 <div class="entity-selector" id="{{ prefix }}_widget" data-fetch-url="/hx/entity-name">
     <!-- Search input: uses a fixed name 'name' so that the query parameter is always 'name' -->
     <input id="{{ prefix }}_name" type="search" name="name" placeholder="search..." autocomplete="off"
         hx-trigger="input changed delay:250ms, name" hx-get="/hx/search" hx-target="#{{ prefix }}_search_results"
         value="{{ initial_name or '' }}">
     <!-- ID input remains unique per widget -->
-    id: <input id="{{ prefix }}_id" class="entity-id-field small" type="number" name="{{ prefix }}_id" placeholder="id"
+    {% if show_id_label %}id:{% endif %} <input id="{{ prefix }}_id" class="entity-id-field small" type="number" name="{{ prefix }}_id" placeholder="id"
         value="{{ initial_id or '' }}">
     <!-- Container for search results -->
     <div id="{{ prefix }}_search_results"></div>
